--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -5,7 +5,7 @@
 }
 
 .contact .leftSide {
-  background-image: url(../Content/pizzaLeft.jpeg);
+  background-image: url(../Content/sushi9.jpeg);
   height: 100%;
   flex: 50%;
   background-position: center;
