--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,14 +1,12 @@
 .about {
   width: 100%;
-  height: 90vh;
-  display: flex;
-  flex-direction: column;
+  position: relative;
 }
 
 .aboutTop {
   width: 100%;
-  height: 45%;
-  background-image: url(../Content/multiplePizzas.jpeg);
+  height: 320px;
+  background-image: url(../Content/sushi6.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -16,15 +14,16 @@
 }
 
 .aboutBottom {
-  display: flex;
-  flex-direction: column;
-  height: 55%;
+  margin: auto;
   align-items: center;
   margin-top: 50px;
+  max-width: 800px;
 }
 
 .aboutBottom p {
-  width: 1200px;
+  font-size: 20px;
+  text-align: center;
+  line-height: 32px;
 }
 
 .about .aboutBottom h1 {
@@ -35,4 +34,37 @@
   display: flex;
   justify-content: center;
   transform: translateY(-40px);
+}
+
+.aboutSectionTwo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin-bottom: 160px;
+}
+
+.aboutSectionTwo img {
+  width: 50%; /* Adjust the width as needed */
+  max-width: 400px; /* Set a maximum width for the image */
+  border-radius: 20px;
+}
+
+.sectionTwoText {
+  width: 50%; /* Adjust the width as needed */
+  padding: 0 40px; /* Add padding for spacing */
+}
+
+.sectionTwoText h1 {
+  font-size: 40px; /* Adjust the font size as needed */
+  font-weight: 400;
+  color: black;
+  margin-bottom: 20px;
+  margin-top: 80px;
+}
+
+.sectionTwoText p {
+  font-size: 20px;
+  line-height: 32px;
+  color: black;
 }
