--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,36 +1,40 @@
 .home {
-  background-image: url(../Content/pizzabanner.jpeg);
   width: 100%;
-  height: 90vh;
   display: flex;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   flex-direction: column;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  position: relative;
+}
+
+.hero-container {
+  background-image: url(../Content/sushi7.webp);
+  background-size: cover;
+  height: 85vh;
+  width: 100%;
+  padding: 20px;
 }
 
 .headerContainer {
-  width: auto;
-  margin-left: 50px;
+  margin: 160px 40px;
+  height: 100%;
 }
 
 .headerContainer h1 {
-  justify-content: center;
-  align-items: center;
   font-size: 90px;
-  height: 60px;
-  font-weight: 50;
-  color: black;
+  font-weight: 700;
+  color: rgb(255, 255, 255);
+  margin: 0;
 }
 
 .headerContainer p {
-  padding: 0;
   font-size: 40px;
-  font-weight: lighter;
-  color: black;
+  font-weight: normal;
+  color: rgb(255, 255, 255);
+  margin: 0;
 }
 
 .headerContainer button {
@@ -38,62 +42,53 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  justify-content: center;
   background-color: #121619;
   height: 50px;
   width: 180px;
   color: white;
   text-decoration: none;
   font-size: 20px;
+  margin-top: 24px;
 }
 
 .headerContainer button:hover {
   background-color: #07090a;
-  cursor: pointer;
   transition: 0.3s ease-in;
 }
 
-@media only screen and (max-width: 650px) {
-  .home {
-    justify-content: center;
-    align-items: center;
-  }
-  .headerContainer h1,
-  .headerContainer p {
-  }
+.headerContainer2 {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  margin: 80px 0;
+}
 
-  .headerContainer {
-    margin-left: 0px;
-    border-radius: 10px;
-    padding: 10px;
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #121619;
-    color: white;
-  }
+.headerContainer2 hr {
+  color: #07090a;
+  width: 80px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .headerContainer h1 {
-    font-size: 40px;
-    height: 30px;
-    color: white;
-  }
+.address,
+.contact,
+.hours {
+  flex: 1;
+}
 
-  .headerContainer p {
-    font-size: 30px;
-    color: white;
-  }
+.headerContainer2 > div {
+  margin-bottom: 20px;
+}
 
-  .headerContainer button {
-    background-color: white;
-    color: #121619;
-    margin-bottom: 30px;
-  }
+.headerContainer2 h2 {
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
+  margin: 0;
+}
 
-  .headerContainer button:hover {
-    background-color: rgb(225, 225, 225);
-    color: #121619;
-  }
+.headerContainer2 p {
+  font-size: 16px;
+  color: black;
+  margin: 0;
 }
