--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -7,16 +7,16 @@
   flex-direction: column;
 }
 .menu .menuTitle {
-  font-family: cursive;
   font-size: 60px;
 }
 
 .menuList {
-  width: 70vw;
   height: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   place-items: center;
+  margin-bottom: 80px;
+  padding: 20px;
 }
 
 /* MENU ITEM STYLING */
