--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
+  z-index: 100;
 }
 
 /* Logo */
@@ -44,10 +45,6 @@
     padding: 0 10px;
   }
 
-  .navbar img {
-    height: 30px;
-  }
-
   .navbar ul {
     flex-direction: column;
     display: none;
@@ -60,4 +57,21 @@
   .navbar button {
     display: block;
   }
+}
+
+/* reorder icon  */
+
+.reorder-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  margin: 0;
+}
+
+.reorder-button svg {
+  fill: #e1e1e1;
+  width: 28px;
+  height: 28px;
 }
